# command-server

./: .gitignore  README.md  command-server.plugin.zsh  pyproject.toml
command_server/: api.py  command_server.py  errors.py  executor.py  files.py  impl.py  job.py  requests.py  server_config.py  socket_listener.py  token_io.py
command_server/lib/: posix-executor-loop.sh
examples/: eval-executor.sh  test-prog.zsh
examples/eval-executor/: eval-executor.sh  server.conf
examples/nix-executor/: nix-executor.sh  server.conf
examples/print-executor/: print-args.sh  server.conf
functions/: command-server-call  command-server-call-and-forget  command-server-reload  command-server-start  command-server-terminate
lib/: client-funcs.zsh  interactive-client.zsh  posix-executor-loop.sh
src/: command_server.py
src/command_server/: executor.py  model.py  operations.py  requests.py  server_config.py  socket_listener.py  token_io.py
