[project]
name = "command_server_aweager"
version = "0.0.1"
authors = [
  { name="Alex Eager" },
]
description = "A server for transparently executing commands in a different environment"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "result",
    #"jrpc @ TODO",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["command_server"]

[project.urls]
Homepage = "https://github.com/aweager/command-server"
Issues = "https://github.com/aweager/command-server/issues"

[tool.black]
line-length = 100
preview = true

[tool.isort]
profile = "black"
